
===========================================================================
                    gwenhywfar-1.99.7 (2006/02/06)
===========================================================================

The CryptToken framework now handles up to six keys per user, some memory
leaks and some minor bugs have been fixed.


===========================================================================
                    gwenhywfar-1.99.6 (2006/01/30)
===========================================================================

The OpenHBCI CryptToken now reports a bad pin to the application (i.e.
AqBanking is now able to intercept bad pins from these CryptTokens as well).


===========================================================================
                    gwenhywfar-1.99.5 (2006/01/26)
===========================================================================

This release fixes some bugs in HTTP code and working with crypt tokens is
now safer.


===========================================================================
                    gwenhywfar-1.99.4 (2006/01/17)
===========================================================================

This release fixes some bugs in the build system (especially regarding
GCC's new visibility feature).


===========================================================================
                    gwenhywfar-1.99.3 (2006/01/11)
===========================================================================

This release fixes some minor bugs and makes use of GCCs visibility features
(thus removing about 700 symbols from the shared library).


===========================================================================
                    gwenhywfar-1.99.2 (2005/12/15)
===========================================================================

This release fixes some problems with the network code and Gnucash.


===========================================================================