@@ -16,12 +16,12 @@ AC_CONFIG_HEADERS([config.h])
 #
 # versions
 #
-GWENHYWFAR_VERSION_MAJOR=1
-GWENHYWFAR_VERSION_MINOR=99
-GWENHYWFAR_VERSION_PATCHLEVEL=7
-GWENHYWFAR_VERSION_BUILD=4
+GWENHYWFAR_VERSION_MAJOR=2
+GWENHYWFAR_VERSION_MINOR=0
+GWENHYWFAR_VERSION_PATCHLEVEL=0
+GWENHYWFAR_VERSION_BUILD=0
 dnl "stable", "rcX", "betaX", "cvs"
-GWENHYWFAR_VERSION_TAG="cvs"
+GWENHYWFAR_VERSION_TAG="stable"
 GWENHYWFAR_VERSION_FULL_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL.$GWENHYWFAR_VERSION_BUILD${GWENHYWFAR_VERSION_TAG}"
 GWENHYWFAR_VERSION_STRING="$GWENHYWFAR_VERSION_MAJOR.$GWENHYWFAR_VERSION_MINOR.$GWENHYWFAR_VERSION_PATCHLEVEL"
 
@@ -32,8 +32,8 @@ OHBCI_VERSION_STRING="0.1.0"
 #
 # SO version for Gwenhywfar
 #
-GWENHYWFAR_SO_CURRENT="40"
-GWENHYWFAR_SO_AGE="2"
+GWENHYWFAR_SO_CURRENT="41"
+GWENHYWFAR_SO_AGE="3"
 GWENHYWFAR_SO_REVISION="1"
 GWENHYWFAR_SO_EFFECTIVE="`echo \$(($GWENHYWFAR_SO_CURRENT-$GWENHYWFAR_SO_AGE))`"
 
