@@ -3,9 +3,11 @@
   ! as soon as the next release of GnuCash is out (2.0.0)                !
   ------------------------------------------------------------------------
 
-  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
-  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
-  ------------------------------------------------------------------------
+
+===========================================================================
+MARK: released gwenhywfar-2.0.0 (2006/02/27)
+===========================================================================
+
 
 2006/02/24: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
