@@ -1,5 +1,13 @@
 
 ===========================================================================
+                    gwenhywfar-2.0.0 (2006/02/27)
+===========================================================================
+
+This release fixes the spurious signature error encountered with AqHBCI and
+improves the API documentation.
+
+
+===========================================================================
                     gwenhywfar-1.99.7 (2006/02/06)
 ===========================================================================
 
